<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.ispinger.Selections">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="16dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:background="@color/opaquewhite"
        android:weightSum="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings1"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/startBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onStartBtn"
            android:text="@string/settings4"
            android:background="@drawable/roundedbutton"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:padding="20dp"/>


        <TextView
            android:id="@+id/stopTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings2"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/stopBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onStopBtn"
            android:textSize="20sp"
            android:background="@drawable/roundedbutton"
            android:text="@string/settings4"
            android:layout_marginBottom="20dp"
            android:padding="20dp"/>


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/simpleSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.23"
            android:checked="true"
            android:padding="5dp"
            android:text="@string/settings3"
            android:textOff="@string/No"
            android:textOn="@string/Yes"
            android:textSize="20sp"
            app:showText="true"
            tools:ignore="InefficientWeight" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:onClick="goHome"
            android:padding="20dp"
            android:text="@string/goHome"
            android:textSize="20sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
